--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,37 +14,37 @@
     <string name="test"> Kiểm tra</string>
 
     <string name="menu_add">Danh sách phép cộng</string>
-    <string name="cong_lien_tiep">Bảng cộng</string>
+    <string name="cong_lien_tiep">Cộng liên tiếp</string>
     <string name="cong_mot_chu_so">Cộng 1 chữ số</string>
     <string name="cong_ba_chu_so">Cộng 3 chữ số</string>
     <string name="cong_hai_chu_so">Cộng 2 chữ số</string>
     <string name="cong_ba_so">Cộng 3 số</string>
-    <string name="phep_cong_don_gian">Phép cộng đơn giản</string>
+    <string name="phep_cong_don_gian">Cộng đơn giản</string>
 
     <string name="caiDatTable">Cài đặt</string>
     <string name="rank">Xếp hạng</string>
     <string name="answer">Câu trả lời</string>
 
-    <string name="bang_nhan">Bảng nhân</string>
+    <string name="bang_nhan">Nhân liên tiếp</string>
     <string name="nhan_mot_chu_so">Nhân 1 x 1 chữ số </string>
     <string name="nhan_hai_chu_so">Nhân 2 x 1 chữ số</string>
     <string name="nhan_so_hai_don_vi">Nhân 2 x 2 chữ số</string>
     <string name="nhan_ba_so">Nhân 3 x 1 chữ số</string>
-    <string name="phep_nhan_don_gian">Phép nhân đơn giản</string>
+    <string name="phep_nhan_don_gian">Nhân đơn giản</string>
 
-    <string name="bang_chia">Bảng chia</string>
+    <string name="bang_chia">Chia liên tiếp</string>
     <string name="chia_mot_chu_so">Chia 1 / 1 chữ số</string>
     <string name="chia_hai_chu_so">Chia 2 / 1 chữ số</string>
     <string name="chia_so_hai_don_vi">Chia 2 / 2 chữ số</string>
     <string name="chia_ba_chu_so">Chia 3 / 1 số</string>
-    <string name="phep_chia_don_gian">Phép chia đơn giản</string>
+    <string name="phep_chia_don_gian">Chia đơn giản</string>
 
-    <string name="bang_tru">Bảng trừ</string>
+    <string name="bang_tru">Trừ liên tiếp</string>
     <string name="tru_mot_chu_so">Trừ 1 - 1  chữ số</string>
     <string name="tru_ba_chu_so">Trừ 3 - 1 chữ số</string>
     <string name="tru_hai_chu_so">Trừ 2- 2 chữ số</string>
     <string name="tru_ba_so">Trừ 3 số</string>
-    <string name="Phep_tru_don_gian">Phép trừ đơn giản</string>
+    <string name="Phep_tru_don_gian">Trừ đơn giản</string>
 
 
     <string name="app">Bang Nhan</string>
@@ -64,7 +64,7 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tab_1">Trang chủ</string>
-    <string name="tab_2">Xếp hạng</string>
+    <string name="tab_2">Lịch sử làm bài</string>
     <string name="tab_3">Cài đặt</string>
     <string name="tab_4">Tab 4</string>
     <string name="tab_5">Xem hồ sơ cá nhân</string>
@@ -82,6 +82,7 @@
     <string name="diem">Điểm</string>
     <string name="ten">Tên</string>
     <string name="nhac_nen">Nhạc nền</string>
+    <string name="thoi_gian">Thời gian</string>
 
 
     <string-array name="comparison_operators">
